Don't crash when importing VPN config with missing NetworkManager plugin

We delegate import of e.g. OpenVPN files to NetworkManager

However that only works when the relevant NetworkManager plugin is installed

Don't crash if it isn't

BUG: 465484